<?xml version='1.0' encoding='utf-8'?><!--
 *  Paintroid: An image manipulation application for Android.
 *  Copyright (C) 2010-2015 The Catrobat Team
 *  (<http://developer.catrobat.org/credits>)
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU Affero General Public License as
 *  published by the Free Software Foundation, either version 3 of the
 *  License, or (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 *  GNU Affero General Public License for more details.
 *
 *  You should have received a copy of the GNU Affero General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.

-->
<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="pocketpaint_app_name" tools:ignore="UnusedResources">Pocket Paint</string>
    <string name="button_brush">Brush</string>
    <string name="button_cursor">Cursor</string>
    <string name="button_pipette">Pipette</string>
    <string name="button_undo">Undo</string>
    <string name="button_redo">Redo</string>
    <string name="button_stamp">Stamp</string>
    <string name="button_import_image">Import Image</string>
    <string name="button_eraser">Eraser</string>
    <string name="button_transform">Transform</string>
    <string name="button_fill">Fill</string>
    <string name="button_line">Line</string>
    <string name="button_text">Text</string>
    <string name="button_shape">Shapes</string>
    <string name="done">Done</string>

    <string name="color_chooser_title">Color Chooser</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_alpha">Alpha</string>
    <string name="dialog_tools_title">Tools</string>
    <string name="dialog_error_save_title">Error load/save File</string>
    <string name="dialog_error_sdcard_text">Check Image or SD-Card!</string>
    <string name="dialog_brush_width_text">Stroke Width</string>
    <string name="dialog_warning_new_image">Save Changes?</string>
    <string name="help_title">Help</string>
    <string name="help_content_eraser">Remove parts of the image like with an eraser.</string>
    <string name="help_content_brush">Tap on the symbols on the bottom bar to change the color or the brush size.</string>
    <string name="help_content_eyedropper">Tap on the image to select a color.</string>
    <string name="help_content_undo">Tap to undo your previous action.</string>
    <string name="help_content_redo">Tap to redo an undone action.</string>
    <string name="help_content_fill">Tap on the image to fill an area with the selected color.</string>
    <string name="help_content_cursor">Position the cursor where you want to draw. Tap to activate the cursor. Move your finger to draw. Tap again to deactivate.</string>
    <string name="help_content_transform">Use to transform the image.</string>
    <string name="help_content_stamp">Move and resize the rectangle to cover the area you want to stamp. Long press to select the area. Move and Tap again to stamp.</string>
    <string name="help_content_import_png">Import an image from the gallery to the stamp tool.</string>
    <string name="help_content_line">Draw a straight line.</string>
    <string name="help_content_text">Write text and format it. Resize the text box afterwards. Tap to insert the text on the image.</string>
    <string name="help_content_shape">Choose a shape and tap it to insert the selected shape</string>
    <string name="help_content_layer">Create new layers or modify existing ones</string>
    <string name="help_content_color_chooser">Select or adjust a color</string>
    <string name="closing_security_question_title">Quit</string>
    <string name="closing_security_question">Save Changes?</string>
    <string name="closing_catroid_security_question_title">Back to project</string>
    <string name="menu_new_image">New image</string>
    <string name="menu_load_image">Load image</string>
    <string name="menu_save_image">Save image</string>
    <string name="menu_save_copy">Save copy</string>
    <string name="menu_new_image_empty_image">Empty Image</string>
    <string name="menu_hide_menu">Fullscreen</string>
    <string name="menu_show_menu">Exit fullscreen</string>
    <string name="menu_new_image_from_camera">New image from camera</string>
    <string name="pocketpaint_menu_about">@string/pocketpaint_about_title</string>
    <string name="menu_back">@string/closing_catroid_security_question_title</string>
    <string name="menu_export">Export</string>
    <string name="saved">Image saved</string>
    <string name="copy">Copy saved</string>
    <string name="menu_quit">Quit</string>
    <string name="save_button_text">Save</string>
    <string name="discard_button_text">Discard</string>

    <string name="resize_nothing_to_resize">nothing to resize</string>
    <string name="resize_max_image_resolution_reached">max image resolution reached</string>

    <string name="text_tool_dialog_input_title">Your text:</string>
    <string name="text_tool_dialog_format_options">Format options:</string>
    <string name="text_tool_dialog_underline_shortcut" translatable="false">U</string>
    <string name="text_tool_dialog_italic_shortcut" translatable="false">I</string>
    <string name="text_tool_dialog_bold_shortcut" translatable="false">B</string>
    <string name="text_tool_dialog_input_hint">Tap here to write</string>
    <string name="text_tool_dialog_font_monospace" translatable="false">Monospace</string>
    <string name="text_tool_dialog_font_serif" translatable="false">Serif</string>
    <string name="text_tool_dialog_font_sans_serif" translatable="false">Sans Serif</string>
    <string name="text_tool_dialog_font_dubai" translatable="false">Dubai</string>
    <string name="text_tool_dialog_font_arabic_stc" translatable="false">STC</string>

    <string name="shape_tool_dialog_rect_title">Rectangle</string>
    <string name="shape_tool_dialog_ellipse_title">Ellipse</string>
    <string name="shape_tool_dialog_star_title">Star</string>
    <string name="shape_tool_dialog_heart_title">Heart</string>
    <string name="shape_tool_dialog_fill_title">Fill</string>
    <string name="shape_tool_dialog_outline_title">Outline</string>

    <string name="fill_tool_dialog_color_tolerance_title">Color tolerance</string>

    <string name="transform_tool_auto_crop_text">crop</string>
    <string name="transform_width_text">Width</string>
    <string name="transform_height_text">Height</string>
    <string name="pixel">px</string>


    <string name="stamp_tool_copy_hint">Long press to copy content</string>

    <string name="layers_title">Layers</string>
    <string name="layer_new">New Layer</string>
    <string name="layer_delete">Delete Layer</string>
    <string name="layer_too_many_layers">Too many layers</string>
    <string name="layer_merged">Layers merged</string>

    <string name="dialog_shape_text">Shape</string>
    <string name="dialog_loading_image_failed_title">Error on loading image</string>
    <string name="dialog_loading_image_failed_text">Not a valid image file</string>

    <string name="drawer_open" tools:ignore="UnusedResources">Open navigation drawer</string>
    <string name="drawer_close" tools:ignore="UnusedResources">Close navigation drawer</string>
    <string name="transform_info_text">Drag edges to their new position, then tap to enlarge or crop the image area.</string>
    <string name="cursor_draw_inactive">Pan to position, then tap to start painting.</string>
    <string name="cursor_draw_active">Pan to draw, then tap again to stop painting.</string>
    <string name="welcome_to_pocket_paint">Welcome To Pocket Paint</string>
    <string name="intro_welcome_text">With Pocket Paint there are no limits to your creativity. If you are new start the intro or just skip it if you are already familiar with Pocket Paint.</string>
    <string name="intro_tool_more_information">Click on a Tool to get more information</string>
    <string name="more_possibilities">More possibilities</string>
    <string name="intro_possibilities_text">Use the top bar to open the main menu, undo or redo changes, change the color, or show the layers dialog.</string>
    <string name="landscape">Landscape</string>
    <string name="intro_landscape_text">Pocket Paint also supports drawing in landscape mode to give you the best painting experience.</string>
    <string name="enjoy_pocket_paint">You are all set. Enjoy Pocket Paint.</string>
    <string name="intro_get_started">Get started and create a new masterpiece.</string>
    <string name="lets_go">Let\'s Go</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>

    <string name="pocketpaint_about_title">About</string>
    <string name="pocketpaint_about_version">Version %s</string>
    <string name="pocketpaint_about_license">GNU Affero General Public License, v3</string>
    <string name="pocketpaint_about_content">Pocket Paint is a picture editing library that is part of the Catrobat project.\n\nCatrobat is a visual programming language and set of creativity tools for smartphones, tablets and mobile browsers.\n\nThe source code of Pocket Paint is mainly licensed under the %s.\nFor precise details of the license see the link below.</string>
    <string name="pocketpaint_about_url_license_description">Pocket Paint Source Code License</string>
    <string name="pocketpaint_about_url_catrobat_description">About Catrobat</string>
    <string name="pocketpaint_about_url_license" translatable="false">&lt;a href=\"http://developer.catrobat.org/licenses\"&gt;%s&lt;/a&gt;</string>
    <string name="pocketpaint_about_url_catrobat" translatable="false">&lt;a href=\"http://catrobat.org/\"&gt;%s&lt;/a&gt;</string>
</resources>
